--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -10,8 +10,8 @@
 /* reset css  */
 :root {
     --white: #ffffff;
-    --green: #C0A48F;
-    --grullo: #566641;
+    --grullo: #C0A48F;
+    --green: #566641;
 }
 
 *{
@@ -31,19 +31,26 @@ img {
 body {
     display: flex;
     flex-direction: column;
-    justify-content: center;
-
+    justify-content: space-between;
     max-width: 100%;
-    min-height: 100wh;
-    background-color: var(--grullo) ;
+    min-height: 100vh;
+    background-color: var(--green) ;
     color: var(--white);
     font-family: "open";
-    row-gap: 2.5rem;
-    
+   
+}
+
+a :hover{
+    color: var(--grullo);
 }
 
 /* HEADER */
-
+main {
+    display: flex;
+    flex-direction: column;
+    row-gap: 0.5rem;
+    
+}
 header {
     display: flex;
     flex-flow: row wrap;
@@ -51,75 +58,90 @@ header {
     justify-content: space-between;
     align-items: center;
     width: 100%;
+    padding: 0 2.5rem 2.5rem 2.5rem;
 }
 header img {
-    max-width: 14rem;
-    padding: 0rem 2.5rem 0rem 2.5rem;
+    max-width: 12vw;
+}
+
+@media screen and (max-width: 600px) {
+    header img {
+        max-width: 6rem !important;
+    }
 }
 
 header div{
-    padding: 2.5rem;
+    flex-direction: row;
+    column-gap: 2.5rem;
     display: none;
+
 }
 
 
 /* LANDING-PAGE */
-
-section {
-
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-between;
-
-    align-items: center;
-    
-
-    
-    padding: 2.5rem;
-    column-gap: 5rem;
-    row-gap: 5rem;
-
-   
-  
-}
-
 .background {
     background-image: url("banner-1.png");
     background-size: cover;
     background-repeat: no-repeat;
     width: 100%;
     position: relative;
-   height: auto;
+    height: auto;
 
+}
 
+section {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    padding: 2.5rem;
+    column-gap: 5rem;
+    row-gap: 5rem;
 }
 
 h1 {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
     text-align: center;
+    font-size: 3vw;
+    color: var(--grullo);  
 }
 
+@media screen and (max-width: 1030px) {
+    h1 {
+        font-size: 2rem !important;
+    }
+}
 
 .first__container__1{
-    background-color: red;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    row-gap: 1.5rem;
 }
+
 .first__container__1__text {
     max-width: 30rem;
     display: flex;
     flex-direction: column;
+    justify-content: center;
     row-gap: 1rem;
+    text-align: center;
 }
 
 .first__container__1__text__name {
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
     padding-bottom: 1rem;
     font-family: "play";
+    text-align: center;
 }
 
 .first__container__1__button {
     padding: 1rem;
-    background-color: var(--grullo) ;
+    background-color: var(--green) ;
     width: 12rem;
     display: grid;
     place-items: center;
@@ -127,18 +149,103 @@ h1 {
 }
 
 section img {
-width: 14rem;
-height: 14rem;
-
+    width: 25rem;
+    height: 20rem;
 }
 
-.second__container span {
-    font-family: "play";
+@media screen and (max-width: 600px) {
+    section img {
+        right: 15rem;
+        width: 100%;
+        height: 100%; 
+    }
 }
 
-main {
+.second__container {
     display: flex;
     flex-direction: column;
-    row-gap: 2.5rem;
+    row-gap: 1.5rem;
+    font-family: "play";
+    justify-content: center;
+    text-align: center;
 }
 
+
+footer {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    column-gap: 3rem;
+    justify-content: center;
+    align-items: center;
+    font-family: "play";
+    padding: 2.5rem;
+
+}
+
+
+@media screen and (min-width: 65rem) {
+    header div{
+        display: flex;
+    }
+    .first__container__1{
+        display: flex;
+        align-items: flex-start;
+        justify-content: flex-start;
+  
+    }
+    .first__container__1__text {
+        text-align: inherit;
+        justify-content: flex-start;
+    }
+    .first__container__1__text__name{
+        align-items: flex-start;
+        justify-content: flex-end;
+        text-align: inherit;
+    }
+
+  }
+
+/* ABOUT.PHP */
+
+    .main__section {
+        background-image: url("banner-2.png");
+        background-size: cover;
+        background-repeat: no-repeat;
+        width: 100%;
+        position: relative;
+        height: auto;
+    }
+
+    .main__section__div {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+        row-gap: 2.5rem;
+    }
+
+    @media screen and (max-width: 1030px) {
+        .main__section__div {
+            display: flex;
+            flex-flow: row wrap;
+            justify-content: center;
+        }
+        .main__section__div p {
+            font-size: 1rem !important;
+        }
+    }
+
+    .main__section__div p {
+        font-size: 1vw;
+    }
+
+    .main__section__div__1 {
+        margin-right: 2rem;
+        .main__section__div__1
+    }
+
+    .main__section__div__2 {
+        
+    }
+    
